--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
-      <li><a href="https://www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest" class="govuk-link">Stop and search | Ethnicity facts and figures</a></li>
-      <li><a href="http://www.cheltenham.gov.uk" class="govuk-link">Cheltenham Borough Council</a></li>
       <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
-      <li><a href="http://www.hambleton.gov.uk/" class="govuk-link">Hambleton District Council</a></li>
-      <li><a href="http://www.e-lindsey.gov.uk" class="govuk-link">East Lindsey District Council</a></li>
-      <li><a href="http://www.barking-dagenham.gov.uk" class="govuk-link">London Borough of Barking and Dagenham Council</a></li>
-      <li><a href="http://www.southbucks.gov.uk" class="govuk-link">South Bucks District Council</a></li>
-      <li><a href="http://www.oxford.gov.uk" class="govuk-link">Oxford City Council</a></li>
+      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
+      <li><a href="http://www.portsmouth.gov.uk" class="govuk-link">Portsmouth City Council</a></li>
+      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
+      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
+      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
+      <li><a href="http://publicappointments.cabinetoffice.gov.uk/" class="govuk-link">Public Appointments - Cabinet Office</a></li>
+      <li><a href="https://www.nhs.uk/active10" class="govuk-link">Active 10</a></li>
+      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
+      <li><a href="http://www.ards-council.gov.uk/" class="govuk-link">Ards Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
