--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: external_content</h1>
 
-  <p>There are <strong>542</strong> pages with document type
+  <p>There are <strong>543</strong> pages with document type
 &lsquo;external_content&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is not rendered by any apps. This could mean that the document
 type is not meant to be rendered (a redirect for example), or that there aren&rsquo;t
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheltenham.gov.uk">Cheltenham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hambleton.gov.uk/">Hambleton District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.e-lindsey.gov.uk">East Lindsey District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.barking-dagenham.gov.uk">London Borough of Barking and Dagenham Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southbucks.gov.uk">South Bucks District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxford.gov.uk">Oxford City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.suffolkcc.gov.uk">Suffolk County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.boroughofpoole.com">Borough of Poole Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ryedale.gov.uk">Ryedale District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
+<li><a href="https://www.gov.ukhttp//www.west-dunbarton.gov.uk/">West Dunbartonshire Council</a></li>
+<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
+<li><a href="https://www.gov.ukhttp//www.sheffield.gov.uk">Sheffield City Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
