--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/251447.zh-tw">英國貿易文化辦事處對於復興航空GE222班機墜毀事件深表遺憾</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-zealand-united-kingdom-joint-statement-on-cyber-security">New Zealand - United Kingdom Joint Statement on Cyber Security </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/migrant-health-surcharge-to-raise-200-million-a-year">Migrant &lsquo;health surcharge&rsquo; to raise £200 million a year</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/264620.ja">英国ショッピングウィーク　2階建てロンドンバスがTHE NEW MINI 3 DOORと都内を走行</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-chevening-scholarships-in-bolivia-are-open--2">Applications for Chevening Scholarships in Bolivia are open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-job-opportunity-at-the-british-embassy-buenos-aires--3">New job opportunity at the British Embassy Buenos Aires</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286041.es-419">Se presentó la 5ta edición del Festival Shakespeare Buenos Aires en la Residencia del Embajador Británico en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262678.pt">Equipes britânicas de remo estão no Rio de Janeiro</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-goa--2">Advice for British nationals in Goa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/central-american-officials-take-part-in-public-private-partnerships-forum--2">Central American officials take part in Public Private Partnerships Forum</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-chevening-scholarships-open--2">Applications for the UK Government’s Chevening Scholarships open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175313.es-419">Legado de los Juegos Olímpicos de Londres 2012</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services--2">Changes to Passport Services</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
