--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/central-american-officials-take-part-in-public-private-partnerships-forum--2">Central American officials take part in Public Private Partnerships Forum</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-chevening-scholarships-open--2">Applications for the UK Government’s Chevening Scholarships open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175313.es-419">Legado de los Juegos Olímpicos de Londres 2012</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services--2">Changes to Passport Services</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-and-consulate-will-be-closed--2">British Embassy Santiago and Consulate will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/253585.pt">Agenda britânica para atrair empresários brasileiros continua</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/251447.zh-tw">英國貿易文化辦事處對於復興航空GE222班機墜毀事件深表遺憾</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/188483.pt">Fórum Live Experience debate novas tendências em mega eventos</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
