--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/central-american-officials-take-part-in-public-private-partnerships-forum--2">Central American officials take part in Public Private Partnerships Forum</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-chevening-scholarships-open--2">Applications for the UK Government’s Chevening Scholarships open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175313.es-419">Legado de los Juegos Olímpicos de Londres 2012</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services--2">Changes to Passport Services</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/passport-fees-for-british-nationals-overseas-reduced-by-35--2">Passport fees for British nationals overseas reduced by 35%</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukrwanda-cycling-a-formula-for-success--2">UK/Rwanda cycling – a formula for success</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/266786.cs">Velvyslanectví uspořádalo mezinárodní energetický summit</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175441.lt">Paskelbtos pirmos Kompetencijų pusiausvyros peržiūros ataskaitos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/246875.es-419">Abrió la inscripción a las becas Chevening</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/242260.pt">Concurso cultural: Passion for Fashion</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/international-human-rights-day--3">International Human Rights Day</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-sends-his-best-wishes-on-the-occasion-of-eid-al-fitr--2">British Ambassador sends his best wishes on the occasion of Eid Al Fitr</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263630.pt">Dia Mundial contra a Pena de Morte - Declaração Conjunta</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
