--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.hambleton.gov.uk/" class="govuk-link">Hambleton District Council</a></li>
-      <li><a href="http://www.e-lindsey.gov.uk" class="govuk-link">East Lindsey District Council</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
-      <li><a href="http://www.suffolkcc.gov.uk" class="govuk-link">Suffolk County Council</a></li>
-      <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
-      <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
-      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
-      <li><a href="http://www.west-dunbarton.gov.uk/" class="govuk-link">West Dunbartonshire Council</a></li>
-      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
-      <li><a href="http://www.sheffield.gov.uk" class="govuk-link">Sheffield City Council</a></li>
+      <li><a href="http://www.watford.gov.uk/" class="govuk-link">Watford Borough Council</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="http://www.hertsdirect.org/" class="govuk-link">Hertfordshire County Council</a></li>
+      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
+      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
+      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
+      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
+      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
+      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
+      <li><a href="http://www.monmouthshire.gov.uk" class="govuk-link">Monmouthshire County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
